--- a/java/quarkus-postgres/compose.yml
+++ b/java/quarkus-postgres/compose.yml
@@ -16,7 +16,7 @@ services:
       retries: 5
 
   otel-collector:
-    image: otel/opentelemetry-collector-contrib:0.116.1
+    image: otel/opentelemetry-collector-contrib:0.144.0
     command: ["--config=/etc/otel-config.yaml"]
     volumes:
       - ./config/otel-config.yaml:/etc/otel-config.yaml:ro
@@ -32,6 +32,7 @@ services:
       - SCOUT_CLIENT_ID=${SCOUT_CLIENT_ID:-}
       - SCOUT_CLIENT_SECRET=${SCOUT_CLIENT_SECRET:-}
       - SCOUT_TOKEN_URL=${SCOUT_TOKEN_URL:-}
+      - SCOUT_ENVIRONMENT=${SCOUT_ENVIRONMENT:-development}
 
   api:
     build:
