--- a/java/spring-boot-java25-mongodb-java-agent/config/otel-config.yml
+++ b/java/spring-boot-java25-mongodb-java-agent/config/otel-config.yml
@@ -26,9 +26,22 @@ processors:
   memory_limiter:
     limit_mib: 256
     check_interval: 1s
+  filter/noisy:
+    error_mode: ignore
+    traces:
+      span:
+        - 'IsMatch(name, ".*/actuator/.*")'
+  batch:
+    timeout: 10s
+    send_batch_size: 1024
+  resource:
+    attributes:
+      - key: deployment.environment
+        value: ${SCOUT_ENVIRONMENT}
+        action: upsert
 
 exporters:
-  otlphttp/b14:
+  otlp_http/b14:
     endpoint: ${SCOUT_ENDPOINT}
     auth:
       authenticator: oauth2client
@@ -49,13 +62,13 @@ service:
   pipelines:
     traces:
       receivers: [otlp]
-      processors: [memory_limiter]
-      exporters: [otlphttp/b14, debug]
+      processors: [memory_limiter, filter/noisy, resource, batch]
+      exporters: [otlp_http/b14, debug]
     metrics:
       receivers: [otlp]
-      processors: [memory_limiter]
-      exporters: [otlphttp/b14, debug]
+      processors: [memory_limiter, resource, batch]
+      exporters: [otlp_http/b14, debug]
     logs:
       receivers: [otlp]
-      processors: [memory_limiter]
-      exporters: [otlphttp/b14, debug]
+      processors: [memory_limiter, resource, batch]
+      exporters: [otlp_http/b14, debug]
