--- a/rust/actix-postgres/config/otel-config.yaml
+++ b/rust/actix-postgres/config/otel-config.yaml
@@ -32,14 +32,15 @@ processors:
     timeout: 10s
     send_batch_size: 1024
   filter/noisy:
+    error_mode: ignore
     traces:
       span:
         - 'name == "pg-pool.connect"'
         - 'IsMatch(name, "^(GET|POST|PUT|DELETE|PATCH|HEAD|OPTIONS)$")'
-        - 'IsMatch(name, ".*/api/health")'
+        - 'IsMatch(name, ".*/health.*")'
 
 exporters:
-  otlphttp/b14:
+  otlp_http/b14:
     endpoint: ${env:SCOUT_ENDPOINT}
     auth:
       authenticator: oauth2client
@@ -61,12 +62,12 @@ service:
     traces:
       receivers: [otlp]
       processors: [memory_limiter, filter/noisy, batch]
-      exporters: [otlphttp/b14, debug]
+      exporters: [otlp_http/b14, debug]
     metrics:
       receivers: [otlp]
       processors: [memory_limiter, batch]
-      exporters: [otlphttp/b14, debug]
+      exporters: [otlp_http/b14, debug]
     logs:
       receivers: [otlp]
       processors: [memory_limiter, batch]
-      exporters: [otlphttp/b14, debug]
+      exporters: [otlp_http/b14, debug]
