--- a/php/php84-slim3-mongodb/.env.example
+++ b/php/php84-slim3-mongodb/.env.example
@@ -13,7 +13,7 @@ OTEL_TRACES_EXPORTER=otlp
 OTEL_METRICS_EXPORTER=otlp
 OTEL_LOGS_EXPORTER=otlp
 OTEL_PHP_AUTOLOAD_ENABLED=true
-OTEL_RESOURCE_ATTRIBUTES=deployment.environment=development
+OTEL_RESOURCE_ATTRIBUTES=deployment.environment.name=development
 
 # Base14 Scout (set via environment, not committed to repo)
 # SCOUT_ENDPOINT=https://your-tenant.base14.io:4318
