--- a/php/php84-slim3-mongodb/compose.yml
+++ b/php/php84-slim3-mongodb/compose.yml
@@ -5,7 +5,7 @@ x-otel-env: &otel-env
   OTEL_METRICS_EXPORTER: otlp
   OTEL_LOGS_EXPORTER: otlp
   OTEL_PHP_AUTOLOAD_ENABLED: "true"
-  OTEL_RESOURCE_ATTRIBUTES: deployment.environment=development
+  OTEL_RESOURCE_ATTRIBUTES: deployment.environment.name=development
 
 x-mongo-env: &mongo-env
   MONGO_URI: mongodb://mongo:27017
@@ -56,6 +56,7 @@ services:
       <<: [*otel-env, *mongo-env]
       OTEL_SERVICE_NAME: php-slim3-mongodb-otel
       JWT_SECRET: ${JWT_SECRET:-change-this-secret-in-production-use-a-long-random-string}
+      APP_DEBUG: "true"
     depends_on:
       mongo:
         condition: service_healthy
