Add provider fallback and fallback metric to ai-content-quality LLM client

--- a/python/ai-content-quality/.env.example
+++ b/python/ai-content-quality/.env.example
@@ -11,6 +11,11 @@ LLM_MODEL=gpt-4.1-nano
 LLM_TEMPERATURE=0.3
 LLM_TIMEOUT=30.0
 
+# Fallback provider (used if primary provider fails after all retries)
+# Set FALLBACK_PROVIDER to a different provider than LLM_PROVIDER
+FALLBACK_PROVIDER=google
+FALLBACK_MODEL=gemini-2.0-flash
+
 # Provider API keys (only the active provider's key is required)
 OPENAI_API_KEY=your-openai-api-key
 
