Add Ollama provider with Docker Compose profile to ai-content-quality

--- a/python/ai-content-quality/.env.example
+++ b/python/ai-content-quality/.env.example
@@ -29,6 +29,12 @@ OPENAI_API_KEY=your-openai-api-key
 # LLM_MODEL=claude-haiku-3-5-20241022
 # ANTHROPIC_API_KEY=your-anthropic-api-key
 
+# Ollama (local, no API key required):
+# LLM_PROVIDER=ollama
+# LLM_MODEL=llama3.2
+# OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_BASE_URL=http://localhost:11434
+
 # =============================================================================
 # OPENTELEMETRY / BASE14 SCOUT
 # =============================================================================
