--- a/python/ai-content-quality/compose.yml
+++ b/python/ai-content-quality/compose.yml
@@ -15,6 +15,9 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY:-}
       - GOOGLE_API_KEY=${GOOGLE_API_KEY:-}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY:-}
+      - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-http://ollama:11434}
+      - FALLBACK_PROVIDER=${FALLBACK_PROVIDER:-google}
+      - FALLBACK_MODEL=${FALLBACK_MODEL:-gemini-2.0-flash}
       - REQUEST_TIMEOUT=${REQUEST_TIMEOUT:-60.0}
       - REVIEW_PROMPT_VERSION=${REVIEW_PROMPT_VERSION:-v1}
       - IMPROVE_PROMPT_VERSION=${IMPROVE_PROMPT_VERSION:-v1}
@@ -46,3 +49,14 @@ services:
       - SCOUT_TOKEN_URL=${SCOUT_TOKEN_URL:-https://auth.base14.io/oauth/token}
       - SCOUT_ENDPOINT=${SCOUT_ENDPOINT:-https://collector.base14.io}
       - SCOUT_ENVIRONMENT=${SCOUT_ENVIRONMENT:-development}
+
+  ollama:
+    image: ollama/ollama:latest
+    profiles: [ollama]
+    ports:
+      - "11434:11434"
+    volumes:
+      - ollama_data:/root/.ollama
+
+volumes:
+  ollama_data:
