Use host.docker.internal as default Ollama URL in ai-content-quality

--- a/python/ai-content-quality/.env.example
+++ b/python/ai-content-quality/.env.example
@@ -32,7 +32,13 @@ OPENAI_API_KEY=your-openai-api-key
 # Ollama (local, no API key required):
 # LLM_PROVIDER=ollama
 # LLM_MODEL=llama3.2
-# OLLAMA_BASE_URL=http://localhost:11434
+#
+# Option A — use Ollama already running on your machine:
+#   OLLAMA_BASE_URL=http://localhost:11434   (default when running the app locally)
+#
+# Option B — spin up Ollama inside Docker Compose:
+#   docker compose --profile ollama up
+#   OLLAMA_BASE_URL=http://ollama:11434      (set this when using the Docker profile)
 OLLAMA_BASE_URL=http://localhost:11434
 
 # =============================================================================
