--- a/python/ai-content-quality/compose.yml
+++ b/python/ai-content-quality/compose.yml
@@ -15,7 +15,9 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY:-}
       - GOOGLE_API_KEY=${GOOGLE_API_KEY:-}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY:-}
-      - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-http://ollama:11434}
+      # Ollama: points to host by default so local Ollama works out of the box.
+      # Override with http://ollama:11434 when using --profile ollama (Dockerized Ollama).
+      - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-http://host.docker.internal:11434}
       - FALLBACK_PROVIDER=${FALLBACK_PROVIDER:-google}
       - FALLBACK_MODEL=${FALLBACK_MODEL:-gemini-2.0-flash}
       - REQUEST_TIMEOUT=${REQUEST_TIMEOUT:-60.0}
