Add OTel logs, document routing, evaluator-optimizer extraction, multi-provider LLM support, and shared pricing to ai-contract-analyzer

--- a/nodejs/ai-contract-analyzer/.env.example
+++ b/nodejs/ai-contract-analyzer/.env.example
@@ -1,6 +1,34 @@
-# AI API Keys
+# ── LLM Provider ──────────────────────────────────────────────────────────────
+# Pick one: anthropic (default) | google | ollama
+LLM_PROVIDER=anthropic
+# LLM_PROVIDER=google
+# LLM_PROVIDER=ollama
+
+# ── Embedding Provider ─────────────────────────────────────────────────────────
+# Pick one: openai (default) | ollama
+# EMBEDDING_PROVIDER=openai
+EMBEDDING_PROVIDER=ollama
+
+# ── API Keys (required only for the active provider) ───────────────────────────
 ANTHROPIC_API_KEY=your-anthropic-api-key
+GOOGLE_GENERATIVE_AI_API_KEY=your-google-api-key
 OPENAI_API_KEY=your-openai-api-key
+
+# ── Ollama (required when LLM_PROVIDER=ollama or EMBEDDING_PROVIDER=ollama) ───
+# Run Ollama locally: https://ollama.ai
+# OLLAMA_BASE_URL=http://localhost:11434
+
+# ── Model overrides (optional — provider defaults shown) ──────────────────────
+# Anthropic:  claude-sonnet-4-6 / claude-haiku-4-5-20251001
+# Google:     gemini-2.5-flash / gemini-2.0-flash
+# Ollama LLM: qwen3:8b / qwen3:4b, ministral-3:14b / ministral-3:3b,
+# 						qwen3-vl:30b / qwen3-vl:4b, gemma3:12b / gemma3:4b, gpt-oss:20b
+# LLM_MODEL_CAPABLE=claude-sonnet-4-6
+# LLM_MODEL_FAST=claude-haiku-4-5-20251001
+
+# OpenAI embed: text-embedding-3-small
+# Ollama embed: embeddinggemma, qwen3-embedding
+EMBEDDING_MODEL=embeddinggemma
 
 # Database
 DATABASE_URL=postgresql://postgres:postgres@localhost:5434/contract_analyzer
