--- a/nodejs/ai-contract-analyzer/package.json
+++ b/nodejs/ai-contract-analyzer/package.json
@@ -4,8 +4,8 @@
   "description": "AI-powered contract analysis pipeline with OpenTelemetry observability",
   "type": "module",
   "scripts": {
-    "dev": "bun run --watch src/index.ts",
-    "start": "bun run src/index.ts",
+    "dev": "bun run --watch --preload ./src/telemetry.ts src/index.ts",
+    "start": "bun run --preload ./src/telemetry.ts src/index.ts",
     "build": "bun build src/index.ts --outdir dist --target bun",
     "typecheck": "tsc --noEmit",
     "lint": "bunx biome check src tests",
@@ -21,24 +21,28 @@
     "docker:down": "docker compose down -v"
   },
   "dependencies": {
-    "hono": "^4.12.0",
-    "ai": "^6.0.95",
     "@ai-sdk/anthropic": "^3.0.46",
+    "@ai-sdk/google": "^3.0.30",
     "@ai-sdk/openai": "^3.0.30",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.212.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.212.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.212.0",
+    "@opentelemetry/instrumentation": "^0.212.0",
+    "@opentelemetry/instrumentation-http": "^0.212.0",
+    "@opentelemetry/instrumentation-pg": "^0.64.0",
+    "@opentelemetry/sdk-logs": "^0.212.0",
+    "@opentelemetry/sdk-metrics": "^2.5.1",
+    "@opentelemetry/sdk-node": "^0.212.0",
+    "@opentelemetry/semantic-conventions": "^1.39.0",
+    "@traceloop/node-server-sdk": "^0.22.7",
+    "ai": "^6.0.95",
+    "hono": "^4.12.0",
+    "ollama-ai-provider": "^1.2.0",
+    "pdf-parse": "^2.4.5",
     "pg": "^8.18.0",
     "pgvector": "^0.2.1",
-    "zod": "^4.3.6",
-    "pdf-parse": "^2.4.5",
-    "@traceloop/node-server-sdk": "^0.22.7",
-    "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/sdk-node": "^0.212.0",
-    "@opentelemetry/sdk-metrics": "^2.5.1",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.212.0",
-    "@opentelemetry/exporter-metrics-otlp-http": "^0.212.0",
-    "@opentelemetry/instrumentation-http": "^0.212.0",
-    "@opentelemetry/instrumentation": "^0.212.0",
-    "@opentelemetry/instrumentation-pg": "^0.64.0",
-    "@opentelemetry/semantic-conventions": "^1.39.0"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "typescript": "^5.9.3",
