Update ai-sales-intelligence: mount _shared, fix pricing path, update model names, debug verbosity

--- a/python/ai-sales-intelligence/compose.yml
+++ b/python/ai-sales-intelligence/compose.yml
@@ -14,6 +14,7 @@ services:
       - SCOUT_ENVIRONMENT=${SCOUT_ENVIRONMENT:-development}
     volumes:
       - ./data:/app/data
+      - ../../_shared:/app/_shared:ro
     depends_on:
       postgres:
         condition: service_healthy
