--- a/python/ai-sales-intelligence/otel-collector-config.yaml
+++ b/python/ai-sales-intelligence/otel-collector-config.yaml
@@ -70,9 +70,7 @@ exporters:
 
   # Debug exporter for local development
   debug:
-    verbosity: basic
-    sampling_initial: 5
-    sampling_thereafter: 200
+    verbosity: detailed
 
 service:
   extensions: [health_check, zpages, oauth2client]
