Add Ollama support to ai-sales-intelligence with capable/fast model split

--- a/python/ai-sales-intelligence/.env.example
+++ b/python/ai-sales-intelligence/.env.example
@@ -5,24 +5,40 @@
 # LLM PROVIDER CONFIGURATION
 # =============================================================================
 
-# Primary LLM provider: "anthropic", "google", or "openai"
-LLM_PROVIDER=anthropic
+# Primary LLM provider: "google" | "anthropic" | "openai" | "ollama"
+LLM_PROVIDER=google
 
-# Primary model to use
-LLM_MODEL=claude-sonnet-4-20250514
+# Capable model — used for complex tasks (enrich, draft)
+LLM_MODEL_CAPABLE=gemini-2.5-pro
+
+# Fast model — used for lighter tasks (score, evaluate)
+LLM_MODEL_FAST=gemini-2.5-flash
 
 # Fallback provider (used when primary fails after retries)
-FALLBACK_PROVIDER=google
-FALLBACK_MODEL=gemini-3-flash
+FALLBACK_PROVIDER=anthropic
+FALLBACK_MODEL=claude-haiku-4-5-20251001
 
 # API Keys (only the provider(s) you're using need to be set)
-ANTHROPIC_API_KEY=your-anthropic-api-key
 GOOGLE_API_KEY=your-google-api-key
+ANTHROPIC_API_KEY=your-anthropic-api-key
 OPENAI_API_KEY=your-openai-api-key
 
 # LLM generation settings
 DEFAULT_TEMPERATURE=0.7
 DEFAULT_MAX_TOKENS=1024
+
+# =============================================================================
+# OLLAMA (local models — no API key required)
+# =============================================================================
+# Run Ollama locally: https://ollama.ai
+# Start the ollama compose profile: docker compose --profile ollama up
+
+# LLM_PROVIDER=ollama
+# LLM_MODEL_CAPABLE=qwen3:8b
+# LLM_MODEL_FAST=qwen3:4b
+# FALLBACK_PROVIDER=ollama
+# FALLBACK_MODEL=qwen3:4b
+# OLLAMA_BASE_URL=http://localhost:11434
 
 # =============================================================================
 # DATABASE
