--- a/python/ai-sales-intelligence/compose.yml
+++ b/python/ai-sales-intelligence/compose.yml
@@ -8,7 +8,13 @@ services:
       - OTEL_SERVICE_NAME=ai-sales-intelligence
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
       - OTEL_ENABLED=true
-      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+      - LLM_PROVIDER=${LLM_PROVIDER:-google}
+      - LLM_MODEL_CAPABLE=${LLM_MODEL_CAPABLE:-gemini-2.5-pro}
+      - LLM_MODEL_FAST=${LLM_MODEL_FAST:-gemini-2.5-flash}
+      - FALLBACK_PROVIDER=${FALLBACK_PROVIDER:-anthropic}
+      - FALLBACK_MODEL=${FALLBACK_MODEL:-claude-haiku-4-5-20251001}
+      - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-http://ollama:11434}
+      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY:-}
       - GOOGLE_API_KEY=${GOOGLE_API_KEY:-}
       - OPENAI_API_KEY=${OPENAI_API_KEY:-}
       - SCOUT_ENVIRONMENT=${SCOUT_ENVIRONMENT:-development}
@@ -64,5 +70,14 @@ services:
       postgres:
         condition: service_healthy
 
+  ollama:
+    image: ollama/ollama:latest
+    profiles: [ollama]
+    ports:
+      - "11434:11434"
+    volumes:
+      - ollama_data:/root/.ollama
+
 volumes:
   postgres_data:
+  ollama_data:
