Fix ai-customer-support: tool wiring, Ollama support, input validation, telemetry metrics, verify script

--- a/java/ai-customer-support/Dockerfile
+++ b/java/ai-customer-support/Dockerfile
@@ -13,7 +13,7 @@ WORKDIR /app
 
 ADD https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v2.25.0/opentelemetry-javaagent.jar /app/opentelemetry-javaagent.jar
 
-COPY _shared/pricing.json /app/pricing.json
+COPY --from=shared pricing.json /app/pricing.json
 
 COPY --from=builder /app/build/libs/ai-customer-support-0.0.1-SNAPSHOT.jar /app/app.jar
 
