--- a/astronomy_shop_mobile/.env.example
+++ b/astronomy_shop_mobile/.env.example
@@ -1,14 +1,13 @@
 # OTLP Telemetry Configuration
-OTLP_ENDPOINT=https://your-telemetry-endpoint.example.com
+OTLP_ENDPOINT=http://localhost:8080/otlp-http
 OTLP_TRACES_EXPORTER=v1/traces
 OTLP_METRICS_EXPORTER=v1/metrics
 OTLP_LOGS_EXPORTER=v1/logs
 
-# API Configuration
-# Use HTTPS in production
-API_BASE_URL=https://api.example.com
+# API Configuration (OpenTelemetry Demo frontend-proxy)
+API_BASE_URL=http://localhost:8080/api
 
 # App Configuration
 SERVICE_NAME=astronomy-shop-mobile
-SERVICE_VERSION=1.0.0
-ENVIRONMENT=production
+SERVICE_VERSION=0.0.1
+ENVIRONMENT=development
