--- a/python/django-postgres/requirements.txt
+++ b/python/django-postgres/requirements.txt
@@ -1,24 +1,24 @@
 # Core
-django>=5.2,<5.3
-djangorestframework>=3.16,<4.0
-psycopg[binary]>=3.2
-dj-database-url>=2.3
+django>=5.2.11,<5.3
+djangorestframework>=3.16.1,<4.0
+psycopg[binary]>=3.3.3
+dj-database-url>=3.0.1
 celery>=5.6,<6.0
-redis>=5.2,<6.0
-PyJWT>=2.10,<3.0
-python-dotenv>=1.0
-gunicorn>=23.0
+redis>=7.1.1,<8.0
+PyJWT>=2.11,<3.0
+python-dotenv>=1.2.1
+gunicorn>=25.1
 
 # OpenTelemetry
-opentelemetry-sdk>=1.39
-opentelemetry-exporter-otlp>=1.39
-opentelemetry-instrumentation-django>=0.60b
+opentelemetry-sdk>=1.39.1
+opentelemetry-exporter-otlp>=1.39.1
+opentelemetry-instrumentation-django>=0.60b1
 opentelemetry-instrumentation-psycopg>=0.60b1
 opentelemetry-instrumentation-celery>=0.60b1
 opentelemetry-instrumentation-redis>=0.60b1
 opentelemetry-instrumentation-logging>=0.60b1
 
 # Testing
-pytest>=8.0
-pytest-django>=4.9
-pytest-cov>=6.0
+pytest>=9.0.2
+pytest-django>=4.11.1
+pytest-cov>=7.0
