--- a/python/fastapi-postgres/Makefile
+++ b/python/fastapi-postgres/Makefile
@@ -1,10 +1,10 @@
-.PHONY: test clean dev docker-up docker-down docker-logs docker-build test-api verify-scout build-lint
+.PHONY: test clean dev docker-up docker-down docker-logs docker-build test-api verify-scout lint format typecheck check
 
 test:
 	pytest
 
 clean:
-	rm -rf .pytest_cache .coverage htmlcov __pycache__
+	rm -rf .pytest_cache .mypy_cache .ruff_cache .coverage htmlcov __pycache__
 	find . -type d -name "__pycache__" -exec rm -rf {} + 2>/dev/null || true
 
 dev:
@@ -28,8 +28,17 @@ test-api:
 verify-scout:
 	./scripts/verify-scout.sh
 
-build-lint:
-	@echo "Running tests..."
-	pytest
+lint:
+	ruff check app tests
+	ruff format --check app tests
+
+format:
+	ruff check --fix app tests
+	ruff format app tests
+
+typecheck:
+	mypy app
+
+check: lint typecheck test
 
 .DEFAULT_GOAL := test
