--- a/nodejs/nestjs-postgres/package.json
+++ b/nodejs/nestjs-postgres/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "nest build",
-    "build:lint": "npm run build && npm run lint",
+    "check": "npm run build && npm run lint && npm test",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -33,27 +33,27 @@
     "@nestjs/throttler": "^6.5.0",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.10",
-    "@opentelemetry/api-logs": "^0.211.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.69.0",
-    "@opentelemetry/exporter-logs-otlp-http": "^0.211.0",
-    "@opentelemetry/exporter-metrics-otlp-http": "^0.211.0",
-    "@opentelemetry/exporter-prometheus": "^0.211.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.211.0",
-    "@opentelemetry/instrumentation-express": "^0.58.0",
-    "@opentelemetry/instrumentation-http": "^0.211.0",
-    "@opentelemetry/instrumentation-ioredis": "^0.58.0",
-    "@opentelemetry/instrumentation-nestjs-core": "^0.56.0",
-    "@opentelemetry/instrumentation-pg": "^0.62.0",
-    "@opentelemetry/instrumentation-winston": "^0.54.0",
+    "@opentelemetry/api-logs": "^0.212.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.70.1",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.212.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.212.0",
+    "@opentelemetry/exporter-prometheus": "^0.212.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.212.0",
+    "@opentelemetry/instrumentation-express": "^0.60.0",
+    "@opentelemetry/instrumentation-http": "^0.212.0",
+    "@opentelemetry/instrumentation-ioredis": "^0.60.0",
+    "@opentelemetry/instrumentation-nestjs-core": "^0.58.0",
+    "@opentelemetry/instrumentation-pg": "^0.64.0",
+    "@opentelemetry/instrumentation-winston": "^0.56.0",
     "@opentelemetry/resources": "^2.4.0",
-    "@opentelemetry/sdk-logs": "^0.211.0",
+    "@opentelemetry/sdk-logs": "^0.212.0",
     "@opentelemetry/sdk-metrics": "^2.4.0",
-    "@opentelemetry/sdk-node": "^0.211.0",
+    "@opentelemetry/sdk-node": "^0.212.0",
     "@opentelemetry/semantic-conventions": "^1.39.0",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.66.2",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.3",
+    "class-validator": "^0.15.1",
     "helmet": "^8.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -72,11 +72,13 @@
     "test-exclude": "^7.0.1",
     "lodash": "^4.17.22",
     "serialize-javascript": ">=7.0.3",
-    "ajv": ">=8.17.2"
+    "@angular-devkit/core": {
+      "ajv": ">=8.17.2"
+    }
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.18.0",
+    "@eslint/js": "^10.0.1",
     "@nestjs/cli": "^11.0.14",
     "@nestjs/schematics": "^11.0.9",
     "@nestjs/testing": "^11.1.10",
@@ -88,10 +90,10 @@
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "dotenv": "^17.2.3",
-    "eslint": "^9.18.0",
+    "eslint": "^10.0.2",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
-    "globals": "^16.0.0",
+    "globals": "^17.3.0",
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
     "socket.io-client": "^4.8.0",
