--- a/nodejs/express-typescript-mongodb/package.json
+++ b/nodejs/express-typescript-mongodb/package.json
@@ -33,67 +33,65 @@
   "license": "MIT",
   "dependencies": {
     "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/api-logs": "^0.210.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.68.0",
-    "@opentelemetry/exporter-logs-otlp-http": "^0.210.0",
-    "@opentelemetry/exporter-metrics-otlp-http": "^0.210.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.210.0",
-    "@opentelemetry/instrumentation-express": "^0.58.0",
-    "@opentelemetry/instrumentation-http": "^0.210.0",
-    "@opentelemetry/instrumentation-ioredis": "^0.58.0",
-    "@opentelemetry/instrumentation-mongodb": "^0.63.0",
-    "@opentelemetry/instrumentation-mongoose": "^0.56.0",
-    "@opentelemetry/instrumentation-winston": "^0.54.0",
-    "@opentelemetry/resources": "^2.4.0",
-    "@opentelemetry/sdk-logs": "^0.210.0",
-    "@opentelemetry/sdk-node": "^0.210.0",
-    "@opentelemetry/semantic-conventions": "^1.39.0",
-    "@types/bcryptjs": "^2.4.6",
+    "@opentelemetry/api-logs": "^0.212.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.70.1",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.212.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.212.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.212.0",
+    "@opentelemetry/instrumentation-express": "^0.60.0",
+    "@opentelemetry/instrumentation-http": "^0.212.0",
+    "@opentelemetry/instrumentation-ioredis": "^0.60.0",
+    "@opentelemetry/instrumentation-mongodb": "^0.65.0",
+    "@opentelemetry/instrumentation-mongoose": "^0.58.0",
+    "@opentelemetry/instrumentation-winston": "^0.56.0",
+    "@opentelemetry/resources": "^2.5.1",
+    "@opentelemetry/sdk-logs": "^0.212.0",
+    "@opentelemetry/sdk-node": "^0.212.0",
+    "@opentelemetry/semantic-conventions": "^1.40.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/socket.io": "^3.0.1",
     "bcryptjs": "^3.0.3",
-    "bullmq": "^5.65.0",
+    "bullmq": "^5.70.1",
     "compression": "^1.8.1",
-    "cors": "^2.8.5",
-    "dompurify": "^3.3.0",
-    "express": "^5.0.1",
+    "cors": "^2.8.6",
+    "dompurify": "^3.3.1",
+    "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
-    "ioredis": "^5.9.1",
+    "ioredis": "^5.10.0",
     "isomorphic-dompurify": "^2.33.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.20.1",
-    "socket.io": "^4.8.1",
-    "winston": "^3.17.0",
-    "zod": "^4.1.13"
+    "socket.io": "^4.8.3",
+    "winston": "^3.19.0",
+    "zod": "^4.3.6"
   },
   "overrides": {
     "qs": "^6.14.2",
     "tmp": ">=0.2.4",
     "diff": ">=8.0.3",
-    "ioredis": "^5.9.1"
+    "ioredis": "^5.10.0"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
-    "@types/dompurify": "^3.0.5",
-    "@types/express": "^5.0.0",
-    "@types/node": "^24.10.1",
-    "@types/supertest": "^6.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.18.1",
-    "@typescript-eslint/parser": "^8.18.1",
-    "@vitest/coverage-v8": "^4.0.15",
-    "@vitest/ui": "^4.0.15",
-    "eslint": "^9.17.0",
+    "@types/express": "^5.0.6",
+    "@types/node": "^25.3.2",
+    "@types/supertest": "^7.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.56.1",
+    "@typescript-eslint/parser": "^8.56.1",
+    "@vitest/coverage-v8": "^4.0.18",
+    "@vitest/ui": "^4.0.18",
+    "eslint": "^10.0.2",
     "ioredis-mock": "^8.13.1",
     "mongodb-memory-server": "^10.4.1",
-    "msw": "^2.12.4",
-    "prettier": "^3.4.2",
-    "socket.io-client": "^4.8.1",
-    "supertest": "^7.1.4",
+    "msw": "^2.12.10",
+    "prettier": "^3.8.1",
+    "socket.io-client": "^4.8.3",
+    "supertest": "^7.2.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2",
-    "vitest": "^4.0.15"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
   },
   "engines": {
     "node": ">=24.0.0"
