--- a/nodejs/fastify-postgres/package.json
+++ b/nodejs/fastify-postgres/package.json
@@ -32,44 +32,45 @@
     "@fastify/otel": "^0.16.0",
     "@fastify/rate-limit": "^10.3.0",
     "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/api-logs": "^0.211.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.69.0",
-    "@opentelemetry/exporter-logs-otlp-http": "^0.211.0",
-    "@opentelemetry/exporter-metrics-otlp-http": "^0.211.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.211.0",
-    "@opentelemetry/resources": "^2.4.0",
-    "@opentelemetry/sdk-logs": "^0.211.0",
-    "@opentelemetry/sdk-metrics": "^2.4.0",
-    "@opentelemetry/sdk-node": "^0.211.0",
-    "@opentelemetry/semantic-conventions": "^1.39.0",
+    "@opentelemetry/api-logs": "^0.212.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.70.1",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.212.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.212.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.212.0",
+    "@opentelemetry/resources": "^2.5.1",
+    "@opentelemetry/sdk-logs": "^0.212.0",
+    "@opentelemetry/sdk-metrics": "^2.5.1",
+    "@opentelemetry/sdk-node": "^0.212.0",
+    "@opentelemetry/semantic-conventions": "^1.40.0",
     "bcrypt": "^6.0.0",
-    "bullmq": "^5.66.7",
+    "bullmq": "^5.70.1",
     "drizzle-orm": "^0.45.1",
-    "fastify": "^5.7.1",
+    "fastify": "^5.7.4",
     "fastify-plugin": "^5.1.0",
-    "ioredis": "^5.9.2",
-    "pg": "^8.17.2",
-    "pino": "^10.3.0",
-    "pino-opentelemetry-transport": "^2.0.0",
+    "ioredis": "^5.10.0",
+    "pg": "^8.19.0",
+    "pino": "^10.3.1",
+    "pino-opentelemetry-transport": "^3.0.0",
     "pino-pretty": "^13.1.3",
     "prom-client": "^15.1.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
+    "@eslint/js": "^10.0.1",
     "@types/bcrypt": "^6.0.0",
-    "@types/node": "^24.0.0",
+    "@types/node": "^25.3.2",
     "@types/pg": "^8.16.0",
     "ajv": "^8.18.0",
     "ajv-formats": "^3.0.1",
-    "drizzle-kit": "^0.31.8",
-    "eslint": "^9.17.0",
-    "globals": "^17.0.0",
+    "drizzle-kit": "^0.31.9",
+    "eslint": "^10.0.2",
+    "globals": "^17.3.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.18.1",
+    "typescript-eslint": "^8.56.1",
     "vitest": "^4.0.18"
   },
   "overrides": {
-    "esbuild": "^0.25.0"
+    "esbuild": "^0.25.0",
+    "ioredis": "^5.10.0"
   }
 }
